# empire

./: .env  IMPLEMENTATION_GUIDE.md  README.md  chatbot_app.py  documents i need from clients  pyproject.toml  requirements.txt
client_configs/: sunshine_dental.json
integrations/: __init__.py  calendar_integration.py  crm_integration.py  whatsapp_integration.py
src/expert_s_chatbot_empire_builder_roi_niche_hybrid_integration/: crew.py  main.py
src/expert_s_chatbot_empire_builder_roi_niche_hybrid_integration/config/: agents.yaml  tasks.yaml
