[project]
name = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration"
version = "0.1.0"
description = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
expert_s_chatbot_empire_builder_roi_niche_hybrid_integration = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration.main:run"
run_crew = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration.main:run"
train = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration.main:train"
replay = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration.main:replay"
test = "expert_s_chatbot_empire_builder_roi_niche_hybrid_integration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
